# emotion_letter

./: .gitignore  .gitmessage.txt  README.md  main.py  pyproject.toml  test.ipynb  설명.md
app/ai_service/core/: llm.py
app/ai_service/preprocesser/: preprocessor.ipynb
app/backend/: config.py
app/backend/api/: main.py
app/backend/model/domain/: Users.py
app/backend/model/schema/: FcmRequest.py  StartLetterRequest.py  StartLetterResponse.py  StatusResponse.py
app/backend/services/: ai_proxy.py  user_service.py
app/backend/services/letter/: letter_ocr_service.py
app/tests/: llm_image_test_2.ipynb  llm_image_test_3.py  ocr_crop_handwriting.ipynb  ocr_easyocr_test.ipynb  ocr_google_vision_ocr.ipynb  ocr_paddle_test.ipynb  ocr_pytesseract_test.ipynb  rag_test.ipynb
guide/: CODE_CONVENTION.md  GIT_BRANCH_GUIDE.md  PACKAGE_STYLE.md
